--- a/lib/y2015/dune
+++ b/lib/y2015/dune
@@ -1,5 +1,5 @@
 (library
  (name y2015)
  ; (preprocess (pps ppx_deriving.show ppx_deriving.ord))
- (libraries str yojson core utils)
+ (libraries str yojson core utils list)
 )
