--- a/lib/misc/dune
+++ b/lib/misc/dune
@@ -35,6 +35,11 @@
  (modules string))
 
 (library
+ (name dll)
+ (preprocess (pps ppx_deriving.show ppx_deriving.ord))
+ (modules dll))
+
+(library
  (name pos)
  (preprocess (pps ppx_deriving.show ppx_deriving.ord))
  (modules pos))
