--- a/lib/y2018/dune
+++ b/lib/y2018/dune
@@ -1,6 +1,7 @@
 (library
  (name y2018)
- (preprocess (pps ppx_deriving.show ppx_deriving.ord))
+ (preprocess (pps ppx_deriving.show ppx_deriving.ord ppx_inline_test))
+ (inline_tests)
  (libraries re utils printers list array string tuple pos bfs dll int)
 )
 (env (dev (flags (:standard -w -9))))
