--- a/lib/y2018/dune
+++ b/lib/y2018/dune
@@ -2,6 +2,6 @@
  (name y2018)
  (preprocess (pps ppx_deriving.show ppx_deriving.ord ppx_inline_test))
  (inline_tests)
- (libraries re utils printers list array string tuple pos bfs dll int)
+ (libraries re utils printers list array string tuple pos bfs dll int unix)
 )
 (env (dev (flags (:standard -w -9))))
