--- a/main.opam
+++ b/main.opam
@@ -13,6 +13,13 @@ depends: [
   "ocaml"
   "dune" {>= "3.10"}
   "odoc" {with-doc}
+  "ppx_inline_test" {>= "v0.17.0"}
+  "re"   {>= "1.14"}
+  "ppx_deriving" {>= "6.1.1"}
+  "core"  {>= "v0.17.1"}
+  "yojson" {>= "3.0.0"}
+  "ocaml-lsp-server" {>= "1.24.0"}
+  "ocamlformat"      {>= "0.28.1"}
 ]
 build: [
   ["dune" "subst"] {dev}
