--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,10 @@
     "editor.formatOnSaveMode": "file",
     "files.insertFinalNewline": true
   },
+  "ocaml.sandbox": {
+    "kind": "opam",
+    "switch": "${workspaceFolder:AoC}"
+  },
   // "ocaml.sandbox": {
   //   "kind": "opam",
   //   "switch": "."
